--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OJ</title>
+    <title>音频转文本-免费的语音转文本工具</title>
   </head>
   <body>
     <div id="app"></div>
