--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="./public/config.js"></script>
   </body>
 </html>
